# Craftax

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  MANIFEST.in  README.md  action_types.py  append_actions.py  astar.py  block_types.py  craftax_planner.py  craftax_with_builds.yml  crafting_recipes.json  download_dataset.py  dqn_basic_actions.py  environment.yml  gen_truth_stats.py  generate_data.py  get_clip_features.py  get_pca_features.py  get_resnet_features.py  get_truth_stats.py  helpers.py  issues.md  obs_description.md  option_helpers.py  pca_feature_extractor.py  play_craftax.py  play_craftax_classic.py  ppo.py  ppo_basic_actions.py  ppo_rnn.py  ppo_skills.py  pyproject.toml  requirements-base.txt  requirements-gpu.txt  requirements.txt  run_docker.sh  test.py  (+7 more)
Scripts/: run_all.sh  run_dqn.sh  run_ppo_basic.sh  run_ppo_options.sh
craftax/: __init__.py  constants.py  craftax_env.py  craftax_state.py  game_logic.py  ppo.py  ppo_rnd.py  ppo_rnn.py  renderer.py  temp-plot.py  temp-simulator.py  test.py  time_simulator.py
craftax/analysis/: view_ppo_agent.py
craftax/craftax/: constants.py  craftax_state.py  game_logic.py  play_craftax.py  renderer.py
craftax/craftax/envs/: common.py  craftax_pixels_env.py  craftax_symbolic_env.py
craftax/craftax/util/: game_logic_utils.py  maths_utils.py  noise.py
craftax/craftax/world_gen/: world_gen.py  world_gen_configs.py
craftax/craftax_classic/: constants.py  game_logic.py  play_craftax_classic.py  renderer.py  world_gen.py
craftax/craftax_classic/envs/: common.py  craftax_pixels_env.py  craftax_state.py  craftax_symbolic_env.py
craftax/craftax_classic/util/: noise.py
craftax/craftax_marl/: constants.py  craftax_state.py  game_logic.py  play_craftax.py  renderer.py
craftax/craftax_marl/envs/: common.py  craftax_pixels_env.py  craftax_symbolic_env.py
craftax/craftax_marl/renderer/: renderer_pixels.py  renderer_symbolic.py
craftax/craftax_marl/util/: game_logic_utils.py  maths_utils.py
craftax/craftax_marl/world_gen/: world_gen.py  world_gen_configs.py
craftax/environment_base/: environment_bases.py  environment_no_auto_reset.py  spaces.py  util.py  wrappers.py
craftax/envs/: common.py  craftax_pixels_env.py  craftax_symbolic_env.py  environment.py  wrappers.py
craftax/logz/: batch_logging.py
craftax/models/: icm.py  rnd.py
craftax/tech_tree_gridworld/: gridworld_renderer.py  view_agent_ppo.py  view_agent_rppo.py  world_model_renderer.py
craftax/util/: game_logic_utils.py  noise.py
craftax/world_gen/: world_gen.py  world_gen_configs.py
craftax_classic/: __init__.py  constants.py  game_logic.py  renderer.py  world_gen.py
craftax_classic/analysis/: compare.py  speed_test.py  view_ppo_agent.py
craftax_classic/envs/: common.py  craftax_pixels_env.py  craftax_state.py  craftax_symbolic_env.py  environment.py
src/: play_craftax.py  play_craftax_classic.py  ppo.py  ppo_rnn.py
src/craftax/: __init__.py  constants.py  craftax_state.py  game_logic.py  play_craftax.py  renderer.py
src/craftax_classic/: constants.py  game_logic.py  play_craftax_classic.py  renderer.py  world_gen.py
src/craftax_marl/: constants.py  craftax_state.py  game_logic.py  renderer.py
src/environment_base/: util.py
src/models/: actor_critic.py  unet.py  world_model.py
src/tech_tree_gridworld/: gridworld_renderer.py  gridworld_tech_tree.py  view_world_model.py  world_model_renderer.py
(+23 files in other folders)
